--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "devDependencies": {
     "@metaplex-foundation/amman": "^0.1.0",
     "@metaplex-foundation/solita": "0.2.0",
-    "@project-serum/anchor": "^0.23.0",
+    "@project-serum/anchor": "^0.24.2",
     "@types/chai": "^4.2.21",
     "@types/chai-as-promised": "^7.1.5",
     "@types/mocha": "^9.1.0",
@@ -34,6 +34,7 @@
     "build": "npx lerna run build",
     "mega-test": "yarn run api:gen && yarn run build && yarn run amman:start && yarn test",
     "test": "ts-mocha -p ./tsconfig.json -t 1000000 \"tests/**/*.ts\"",
+    "test:report": "ts-mocha -p ./tsconfig.json -t 1000000 \"tests/**/*.ts\" --reporter json --reporter-options output=./tests/out.json",
     "prepare": "husky install"
   },
   "private": true,
