--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "husky": "^7.0.4",
     "lint-staged": "^12.3.8",
     "mocha": "9.2.2",
+    "mocha-junit-reporter": "^2.0.2",
     "prettier": "2.6.2",
     "ts-mocha": "9.0.2",
     "ts-node": "^10.7.0",
