Switch amman to solana-local-validator

--- a/programs/hydra/Cargo.toml
+++ b/programs/hydra/Cargo.toml
@@ -7,7 +7,7 @@ license = "GPL-3.0"
 
 [lib]
 crate-type = ["cdylib", "lib"]
-name = "hydra"
+name = "hydra_wallet"
 
 [features]
 no-entrypoint = []
