--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -121,17 +121,31 @@ jobs:
       - run: cp -r tests/test-keypairs/* target/deploy
       - run: find . -type f -name "*" -exec sed -i'' -e "s/hyDQ4Nz1eYyegS6JfenyKwKzYxRsCWCriYSAjtzP4Vg/$(solana-keygen pubkey tests/test-keypairs/hydra-keypair.json)/g" {} +
 
-      - run: yarn run amman:start &
-      - run: yarn test
+      - name: Run tests
+        run: solana-test-validator --url https://api.devnet.solana.com --clone metaqbxxUerdq28cj1RbAWkYQm3ybzjb6a8bt518x1s --clone PwDiXFxQsGra4sFFTT8r1QWRMd4vfumiWC1jfWNfdYT --reset &
+      - run: sleep 6
+      - run: solana airdrop 1000 $(solana-keygen pubkey tests/test-key.json) --url http://localhost:8899
+      - run: anchor test --skip-local-validator --provider.cluster localnet
 
-      - name: Upload Test Results
-        if: always()
-        uses: actions/upload-artifact@v3
-        with:
-          name: Unit Test Results
-          path: tests/out.xml
-      - name: Publish Unit Test Results
-        uses: EnricoMi/publish-unit-test-result-action/composite@v1
+      # - run: yarn run amman:start &
+      # - run: yarn test
+
+      - uses: dorny/test-reporter@v1
         if: always()
         with:
-          files: tests/out.xml
+          artifact: test-results
+          name: Local Tests
+          path: ./tests/out.json
+          reporter: mocha-json
+
+      # - name: Upload Test Results
+      #   if: always()
+      #   uses: actions/upload-artifact@v3
+      #   with:
+      #     name: Unit Test Results
+      #     path: tests/out.xml
+      # - name: Publish Unit Test Results
+      #   uses: EnricoMi/publish-unit-test-result-action/composite@v1
+      #   if: always()
+      #   with:
+      #     files: tests/out.xml
