--- a/Anchor.toml
+++ b/Anchor.toml
@@ -1,11 +1,11 @@
 [programs.localnet]
-hydra = "hyDQ4Nz1eYyegS6JfenyKwKzYxRsCWCriYSAjtzP4Vg"
+hydra_wallet = "hyDQ4Nz1eYyegS6JfenyKwKzYxRsCWCriYSAjtzP4Vg"
 
 [programs.devnet]
-hydra = "hyDQ4Nz1eYyegS6JfenyKwKzYxRsCWCriYSAjtzP4Vg"
+hydra_wallet = "hyDQ4Nz1eYyegS6JfenyKwKzYxRsCWCriYSAjtzP4Vg"
 
 [programs.mainnet]
-hydra = "hyDQ4Nz1eYyegS6JfenyKwKzYxRsCWCriYSAjtzP4Vg"
+hydra_wallet = "hyDQ4Nz1eYyegS6JfenyKwKzYxRsCWCriYSAjtzP4Vg"
 
 
 [registry]
@@ -13,10 +13,10 @@ url = "https://anchor.projectserum.com"
 
 [provider]
 cluster = "localnet"
-wallet = "~/.config/solana/id.json"
+wallet = "./tests/test-key.json"
 
 [scripts]
-test = "ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts --reporter mocha-junit-reporter --reporter-options mochaFile=./tests/out.xml"
+test = "ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts --reporter json --reporter-options output=./tests/out.json"
 
 
 
