--- a/Anchor.toml
+++ b/Anchor.toml
@@ -16,7 +16,7 @@ cluster = "localnet"
 wallet = "./tests/test-key.json"
 
 [scripts]
-test = "ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts --reporter json --reporter-options output=./tests/out.json"
-
+# test = "ts-mocha -p ./tsconfig.json -t 1000000 tests/wallet.test.ts"
+test = "ts-mocha -p ./tsconfig.json tests/wallet.test.ts"
 
 
